Fixed the overflow issue in frontend for the list and task. Cleaned up codebase

--- a/TSM-Client-Side/client-app/src/app/pages/task-view/task-view.component.scss
+++ b/TSM-Client-Side/client-app/src/app/pages/task-view/task-view.component.scss
@@ -60,6 +60,7 @@
     flex-direction: column;
     margin: 15px;
     flex-grow: 1;
+    overflow: auto;
 
     .list-menu-item {
         display: flex;
@@ -69,7 +70,7 @@
         width: 100%;
         color: #5f5f5f;
         margin-bottom: 5px;
-
+        
         &:hover {
             background: rgb(255, 219, 88);
         }
@@ -79,7 +80,11 @@
             color: #133f28;
         }
     }
+}
 
+.list-task{
+    padding: 10px 15px;
+    overflow: scroll;
 }
 
 .task {
